--- a/MiniURL-web-app/src/main/resources/templates/generatesort.html
+++ b/MiniURL-web-app/src/main/resources/templates/generatesort.html
@@ -18,16 +18,24 @@
 </head>
 <body>
 	<header th:insert="fragments/navbar.html :: navbar"> </header>
+	<div class="container">
 	<h1>Form</h1>
-	<form action="#" th:action="@{/generatesort}"
-		th:object="${generatesort}" method="post">
-		<p>
-			Message: <input type="text" th:field="*{originalurl}" />
-		</p>
-		<p>
-			<input type="submit" value="Submit" /> <input type="reset"
-				value="Reset" />
-		</p>
+	<form action="#" th:action="@{/generatesort}" th:object="${generatesort}" method="post">
+		<div class="form-group">
+		<label>Url: </label>
+			<input type="text" class="form-control" th:field="*{url}" />
+		</div>
+		
+		<div class="form-group">	
+			<label for="basic-url">User definition:</label>
+			<div class="input-group">
+			<span class="input-group-addon" id="basic-addon3">https://example.com/users/</span>
+			 <input type="text" th:field="*{userdefiniton}" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+			</div>
+		</div>		
+		<button type="submit" class="btn btn-primary">Submit</button>
+			
 	</form>
+	</div><!-- container -->
 </body>
 </html>
