--- a/MiniURL-web-app/src/main/resources/templates/fragments/navbar.html
+++ b/MiniURL-web-app/src/main/resources/templates/fragments/navbar.html
@@ -32,9 +32,9 @@
 				</div>
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="/">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="/generatesort">Shorting</a></li>
-						<li><a href="#urlList">Saved URLs</a></li>
+						<li><a href="/urllist">Saved URLs</a></li>
 					</ul>
 				</div>
 				<!--/.nav-collapse -->
