--- a/MiniURL-web-app/src/main/resources/templates/genrated.html
+++ b/MiniURL-web-app/src/main/resources/templates/genrated.html
@@ -29,10 +29,12 @@
 	<div class="alert alert-success" role="alert" th:if="${warning != 'fail' }">
      SUCCESS: Generation was succeed! 
 	</div>
+	<!--  -->
 	<p th:text="'original: ' + ${formdata.url}" />
 	<p th:text="'userdefinition ' + ${formdata.userdefiniton}" />
+	
 	<p th:text="'sortedurl ' + ${sortedurl}" />
-	<a href="/generatesort">Make new sort link</a>
+	<a href="/preview" th:href="@{/preview(shorturl= ${sortedurlid})}">Preview</a>
 </div><!-- container -->
 </body>
 </html>
