--- a/MiniURL-web-app/src/main/resources/templates/preview.html
+++ b/MiniURL-web-app/src/main/resources/templates/preview.html
@@ -19,23 +19,10 @@
 <body>
 	<header th:insert="fragments/navbar.html :: navbar"> </header>
 	<div class="container">
-	<h1>Form</h1>
-	<form action="#" th:action="@{/generatesort}" th:object="${generatesort}" method="post">
-		<div class="form-group">
-		<label>Url: </label>
-			<input type="text" class="form-control" th:field="*{url}" />
-		</div>
-		
-		<div class="form-group">	
-			<label for="basic-url">User definition:</label>
-			<div class="input-group">
-			<span class="input-group-addon" id="basic-addon3" th:text="${hostname}" >https://example.com/users/</span>
-			 <input type="text" th:field="*{userdefiniton}" class="form-control" id="basic-url" aria-describedby="basic-addon3">
-			</div>
-		</div>		
-		<button type="submit" class="btn btn-primary">Submit</button>
-			
-	</form>
+	<h1>Url link </h1>
+	<p th:text="'shortUrl: ' + ${shortUrl}" />
+	<p th:text="'longurl: ' + ${longurl}" />
+	<a href="/preview" th:href="@{${longurl}}" th:text="${longurl}">Url</a>
 	</div><!-- container -->
 </body>
 </html>
