--- a/MiniURL-web-app/src/main/resources/templates/urllist.html
+++ b/MiniURL-web-app/src/main/resources/templates/urllist.html
@@ -6,16 +6,12 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
 <!-- Optional theme -->
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-
 <!-- Latest compiled and minified JavaScript -->
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <title>Mini URL</title>
 </head>
 <body>
@@ -25,19 +21,14 @@
 			<div class="starter-template">
 				<h1>URL shortener</h1>
 				<p class="lead">This is the list of urls.</p>
-
 			</div>
 		</div>
 		<!-- /.container -->
 	</div>
 	<div class="container">
-
 		<div class="starter-template">
-
 			<h2>URL filter</h2>
-
-			<input class="form-control" id="myInput" type="text"
-				placeholder="Search.."> <br>
+			<input class="form-control" id="myInput" type="text" placeholder="Search.."><br>
 			<table class="table table-bordered table-hover">
 				<thead>
 					<tr>
