--- a/MiniURL-web-app/src/main/resources/templates/fragments/navbar.html
+++ b/MiniURL-web-app/src/main/resources/templates/fragments/navbar.html
@@ -33,7 +33,7 @@
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="/">Home</a></li>
-						<li><a href="/generatesort">Shorting</a></li>
+						<li><a href="/generateshort">Shorting</a></li>
 						<li><a href="/urllist">Saved URLs</a></li>
 					</ul>
 				</div>
