--- a/MiniURL-web-app/src/main/resources/templates/generated.html
+++ b/MiniURL-web-app/src/main/resources/templates/generated.html
@@ -31,10 +31,10 @@
 	</div>
 	<!--  -->
 	<p th:text="'original: ' + ${formdata.url}" />
-	<p th:text="'userdefinition ' + ${formdata.userdefiniton}" />
+	<p th:text="'user definition ' + ${formdata.userdefiniton}" />
 	
-	<p th:text="'sortedurl ' + ${sortedurl}" />
-	<a href="/preview" th:href="@{/preview(shorturl= ${sortedurlid})}">Preview</a>
+	<p th:text="'shorted url ' + ${shortedurl}" />
+	<a href="/preview" th:href="@{/preview(shorturl= ${shortedurlid})}">Preview</a>
 </div><!-- container -->
 </body>
 </html>
