--- a/MiniURL-web-app/src/main/resources/templates/urllist.html
+++ b/MiniURL-web-app/src/main/resources/templates/urllist.html
@@ -7,8 +7,7 @@
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <!-- Optional theme -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+<link rel="stylesheet"	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">	
 <!-- Latest compiled and minified JavaScript -->
 <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -16,34 +15,33 @@
 </head>
 <body>
 	<header th:insert="fragments/navbar.html :: navbar"> </header>
-	<div class="jumbotron">
-		<div class="container">
-			<div class="starter-template">
-				<h1>URL shortener</h1>
-				<p class="lead">This is the list of urls.</p>
-			</div>
+<div class="container">
+		<div class="row border">		
+			<div class="col-sm-12">
+				<h1>URL list</h1>
+				<p class="lead">Here you can see , all shorted url with original link.</p>
+				
+			</div>		
 		</div>
+</div>
 		<!-- /.container -->
-	</div>
+
 	<div class="container">
-		<div class="starter-template">
-			<h2>URL filter</h2>
-			<input class="form-control" id="myInput" type="text" placeholder="Search.."><br>
-			<table class="table table-bordered table-hover">
-				<thead>
-					<tr>
-						<th>Short url</th>
-						<th>Original url</th>
-					</tr>
-				</thead>
-				<tbody th:each="url : ${urls}" id="myTable">
-					<tr>
-						<td th:text="${url.shorturl}">Short url</td>
-						<td th:text="${url.originalurl}">Original url</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		<input class="form-control" id="myInput" type="text" placeholder="Search.."><br>
+		<table class="table table-bordered table-hover">
+			<thead>
+				<tr>
+					<th>Short url</th>
+					<th>Original url</th>
+				</tr>
+			</thead>
+			<tbody th:each="url : ${urls}" id="myTable">
+				<tr>
+					<td th:text="${url.shorturl}">Short url</td>
+					<td th:text="${url.originalurl}">Original url</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 	<!-- /.container -->
 	<script>
