--- a/MiniURL-web-app/src/main/resources/templates/error.html
+++ b/MiniURL-web-app/src/main/resources/templates/error.html
@@ -25,7 +25,7 @@
 
 			<div class="starter-template">
 
-				<h1 th:text=${status}>URL shortener error</h1>
+				<h1 th:text=${status}>Error status</h1>
 				<small th:text=${timestamp}>Error</small>
 				<p class="lead" th:text=${error}>This is an error message.</p>
 				<p class="lead" th:text=${message}>Error timestamp.</p>
