--- a/MiniURL-web-app/src/main/resources/templates/preview.html
+++ b/MiniURL-web-app/src/main/resources/templates/preview.html
@@ -9,16 +9,19 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 <!-- Latest compiled and minified JavaScript -->
 <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 <title>Mini URL</title>
 </head>
 <body>
 	<header th:insert="fragments/navbar.html :: navbar"></header>
-	<div class="container">
-		<h1>Url link </h1>
-		<p th:text="'shortUrl: ' + ${shortUrl}" />
-		<p th:text="'longurl: ' + ${longurl}" />
-		<a href="/preview" th:href="@{${longurl}}" th:text="${longurl}">Short Url</a>
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Url link </h1>
+			<p>Click to link if you want go to site ! Thanks!</p>
+			<a href="/preview" th:href="@{${longurl}}" th:text="${longurl}">Short Url</a>
+		</div>
+		<!-- container -->
 	</div>
-	<!-- container -->
+	<!-- jumbotron -->
 </body>
 </html>
